# cabal-template

./: .gitignore  cabal.project
pkg/: Bench.hs  Test.hs  pkg.cabal
